--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
               <% elsif customer_signed_in? %>
                 <li>
                   <%= link_to public_customers_path,class:'nav-link text-light' do %>
-                    <i class = 'fas fa-user-pen'></i>
+                    <i class = 'fas fa-id-card'></i>
                     マイページ
                   <% end %>
                 </li>
@@ -72,7 +72,7 @@
                 </li>
                 <li>
                   <%=link_to public_cart_items_path,class:'nav-link text-light' do %>
-                    <i class = 'fas fa-cart-shopping'></i>
+                    <i class = 'fas fa-cart-arrow-down'></i>
                     カート
                   <% end %>
                 </li>
