--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,16 +1,21 @@
-<div class ="container" style="margin-top:150px">
-  <!--上下左右中央揃えにするクラス-->
-  <h5 class ="text-center font-weight-bold">
-    <storong>本当に退会しますか？</storong>
-  </h5>
-  <p class ="text-center">
-    退会すると、会員登録情報や<br>
-    これまでの購入履歴情報が閲覧できなくなります。<br>
-    退会する場合は、「退会する」をクリックしてください。
-  </p>
-  <div class ="text-center">
-    <%= link_to "退会しない",public_customers_path,class:'btn btn-md btn-primary' %>
-    退会する
+<div class="container text-center">
+  <div class="row">
+    <div class="col-8 mx-auto">
+      <h1 class="my-5"><strong>本当に退会しますか？</strong></h1>
+      <div>
+        <span><strong>退会すると、会員登録情報や</strong></span></br>
+        <span><strong>これまでの購入履歴が閲覧できなくなります。</strong></span></br>
+        <span><strong>退会する場合は、「退会する」をクリックしてください。</strong></span>
+      </div>
+    </div>
   </div>
 
+  <div class="row mt-5 d-flex justify-content-center">
+    <div class="col-2">
+      <%= link_to "退会しない", public_customers_path, class: "btn btn-primary btn-block btn-sm"%>
+    </div>
+    <div class="col-2">
+      <%= link_to "退会する", public_withdrawal_path, method: :patch, class: "btn btn-danger btn-block btn-sm"%>
+    </div>
+  </div>
 </div>
