--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,4 +1,4 @@
-<div class = "container">
+<div class = "container text-center" style="margin:50px">
   <div class ="row">
     <h4 class = "bg-light">商品一覧</h4>
       <button type="button" class="btn btn-primary rounded-circle p-0" style="width:2rem;height:2rem;">
