--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,4 +1,4 @@
-<div class = "container">
+<div class = "container text-center" style ="margin-top:50px">
     <div class = "row">
         <h4 class = "bg-light">商品新規登録</h4>
         <!--新規登録が失敗した際のエラーメッセージの表示記述-->
