--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<div class ="container" style ="margin:50px">
+    <div class ="row">
+        <h5 class ="bg-light">ショッピングカート</h5>
+    </div>
+    <div class ="row">
+        <% @itemf.each do |item| %>
+            <table class ="table">
+                <thead>
+                    <th>商品名</th>
+                    <th>単価（税込）</th>
+                    <th>数量</th>
+                    <th>小計</th>
+                    <th></th>
+                </thead>
+                <tbody>
+                    <td><%= item.name %></td>
+                    <td><%= item.price %></td>
+                    <td><%= item.amount %></td>
+                    <td><%= item.price %>*<%= item.amount %></td>
+                    <td>削除する</td>
+                </tbody>
+            </table>
+        <% end %>
+    </div>
+    <div class ="row">
+        <div class ="col-6 text-left">
+            <%= link_to "買い物を続ける",root_path,class:'btn btn-sm btn-primary' %>
+        </div>
+        <div class ="col-6 text-right">
+            <table class ="table">
+                <th class ="bg-light">合計金額</th>
+                <td><%= @cart_itemf.sum_of_price %></td>
+            </table>
+        </div>
+    </div>
+    <div class ="row mt-5 d-flex justify-content-center">
+        <%= link_to "情報入力に進む",new_public_order_path,class:'btn btn-md btn-success' %>
+    </div>
+</div>
