--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -3,7 +3,9 @@
         <h5 class ="bg-light">ショッピングカート</h5>
     </div>
     <div class ="row">
-        <% @itemf.each do |item| %>
+        <!--初期値を設定-->
+        <% @sum = 0 %>
+        <% @cart_items.each do |cart_item| %>
             <table class ="table">
                 <thead>
                     <th>商品名</th>
@@ -13,13 +15,15 @@
                     <th></th>
                 </thead>
                 <tbody>
-                    <td><%= item.name %></td>
-                    <td><%= item.price %></td>
-                    <td><%= item.amount %></td>
-                    <td><%= item.price %>*<%= item.amount %></td>
+                    <td><%= cart_item.item.name %></td>
+                    <td><%= cart_item.item.add_tax_price.to_s(:delimited) %></td>
+                    <td><%= cart_item.amount %></td>
+                    <td><%= cart_item.sum_of_price.to_s(:delimited) %></td>
                     <td>削除する</td>
                 </tbody>
             </table>
+            <!---->
+            <% @sum += (cart_item.sum_of_price) %>
         <% end %>
     </div>
     <div class ="row">
@@ -29,7 +33,7 @@
         <div class ="col-6 text-right">
             <table class ="table">
                 <th class ="bg-light">合計金額</th>
-                <td><%= @cart_itemf.sum_of_price %></td>
+                <td><%= @sum %></td>
             </table>
         </div>
     </div>
